# flask-first

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: testing.yaml
examples/minimum_app/: main.py  openapi.yaml
src/flask_first/: __init__.py  exc.py  exceptions.py  schema_maker.py  schemas.py  spec_parser.py  swagger_ui.py  validators.py
src/flask_first/first/: __init__.py  exceptions.py  serializers.py  specification.py  validator.py
src/flask_first/first/loaders/: __init__.py  yaml_loader.py
src/flask_first/openapi/: __init__.py  schema.py
src/flask_first/schema/: custom_fields.py  schema_maker.py  tools.py
src/flask_first/static/swagger_ui/: swagger-ui.css  (+5 more)
tests/: conftest.py  test_args.py  test_endpoints.py  test_files.py  test_flask_first.py  test_init_ext.py  test_multiple_files.py  test_resolver.py  test_responses.py  test_responses__datetime.py  test_spec_validator.py  test_specification.py  test_tools.py  test_url.py  test_urls.py
tests/fields/: test_format_datetime.py
tests/specs/: bad.openapi.yaml
tests/specs/not_valid/: info.openapi.yaml
tests/specs/v3.0/: additional_properties.openapi.yaml  all_of.openapi.yaml  any_of.openapi.yaml  args.openapi.yaml  args.required.openapi.yaml  callback.openapi.yaml  examples.openapi.yaml  files.openapi.yaml  full.openapi.yaml  headers.openapi.yaml  links.openapi.yaml  mini.openapi.yaml  not_defined_name_key.openapi.yaml  not_registered_endpoint.openapi.yaml  nullable.openapi.yaml  object.openapi.yaml  one_of.openapi.yaml  openapi.yaml  param_as_list.openapi.yaml  parameters.openapi.yaml  ref.openapi.yaml  responses.default.openapi.yaml  url.case_sensitive.openapi.yaml  url.non_case_sensitive.openapi.yaml  urls.openapi.yaml
tests/specs/v3.1.0/: additional_properties.openapi.yaml  all_of.openapi.yaml  any_of.openapi.yaml  args.openapi.yaml  args.required.openapi.yaml  callback.openapi.yaml  datetime.openapi.yaml  endpoint.case_sensitive.openapi.yaml  examples.openapi.yaml  files.openapi.yaml  full.openapi.yaml  headers.openapi.yaml  links.openapi.yaml  mini.openapi.yaml  not_defined_name_key.openapi.yaml  not_registered_endpoint.openapi.yaml  nullable.openapi.yaml  object.openapi.yaml  one_of.openapi.yaml  openapi.yaml  param_as_list.openapi.yaml  parameters.openapi.yaml  ref.openapi.yaml  responses.default.openapi.yaml  urls.openapi.yaml
tests/specs/valid/: components.openapi.yaml  info.openapi.yaml  mini.openapi.yaml  servers.openapi.yaml  tags.openapi.yaml
(+10 files in other folders)
