[metadata]
name = Flask-First
version = attr: flask_first.__version__
author = Konstantin Fadeev
author_email = fadeev@stantis.ru
description = Flask extension for using "specification first" principle via OpenAPI specification.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flask-pro/flask-first
project_urls =
    Bug Tracker = https://github.com/flask-pro/flask-first/issues
license = MIT
classifiers =
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
